--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/carrinho.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/carrinho.js"></script>
 
 
 </head>
@@ -19,7 +19,7 @@
     <div class="container py-4">
         <header class="header d-flex justify-content-between align-items-center border-bottom pb-3 mb-3">
             <div class="d-flex align-items-center gap-3">
-                <img src="../img/logo.png" alt="Logo Lojinha" width="200"  class="logo">
+                <img src="img/logo.png" alt="Logo Lojinha" width="200"  class="logo">
             </div>
 
         </header>
@@ -41,7 +41,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="../img/produto_1.webp" alt="Iphone 17" class="img-fluid rounded shadow-sm" width="150">
+                        <img src="img/produto_1.webp" alt="Iphone 17" class="img-fluid rounded shadow-sm" width="150">
                     </td>
                     <td>
                         <div><strong>Apple Iphone 17 256GB</strong></div>
@@ -63,7 +63,7 @@
 
                 <tr>
                     <td>
-                        <img src="../img/produto_2.jpeg" alt="MacBook Air" class="img-fluid rounded shadow-sm" width="150">
+                        <img src="img/produto_2.jpeg" alt="MacBook Air" class="img-fluid rounded shadow-sm" width="150">
                     </td>
                     <td>
                         <div><strong>Apple MacBook Air 13 polegadas</strong></div>
@@ -83,7 +83,7 @@
 
                 <tr>
                     <td>
-                        <img src="../img/produto_4.webp" alt="MacBook Air" class="img-fluid rounded shadow-sm" width="150">
+                        <img src="img/produto_4.webp" alt="MacBook Air" class="img-fluid rounded shadow-sm" width="150">
                     </td>
                     <td>
                         <div><strong>Apple Ipad 2025 11ª geração </strong></div>
